styles/styles.css
:root {
    --primary-color: darkred;
    --sidebar-width: 200px;
    --spacing: 1rem;
    --small-spacing: 0.5rem;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

header,
footer,
.grid {
    max-width: 840px;
    margin: 0 auto;
}

.grid {
    display: grid;
    align-items: center;
    grid-template-columns: 20rem 1fr;
    gap: 1rem;
}

main {
    grid-column: 2/3;
    margin: 1rem;
}

aside {
    width: 20rem;
    text-align: center;
    position: relative;
    grid-column: 1/2;
    grid-row: 1/2;
}

aside h2 {
    position: absolute;
    top: 67%;
    left: 23.5%;
    color: beige
}

aside img {
    width: var(--sidebar-width);
    height: auto;
    box-shadow: 0 0 10px green;
}

nav {
    background-color: var(--primary-color);
    padding: var(--small-spacing);
    display: flex;
    justify-content: space-evenly;
    align-items: center;
}

nav a {
    color: white;
    display: block;
    padding: var(--spacing);
    text-decoration: none;
    font-size: 1.2rem;
    font-weight: 700;
}

main img {
    width: 150px;
    text-align: center;
}

h1 {
    color: var(--primary-color);
    border-bottom: 1px solid black;
}

h1,
h2 {
    padding: var(--spacing);
}

p {
    padding: var(--small-spacing)
}

picture {
    margin: var(--spacing);
    padding: 0.1rem;
    border: 2px solid rgba(173, 216, 230, 0.535);
    float: right;
    box-shadow: 0 0 30px black;
}

footer {
    margin-top: 15px;
    border-top: 1px solid #000;
    text-align: center;
}

/* Class selectors */

.box {
    margin: 1rem;
    border: 1px solid rgb(0 0 0 / 10%);
    padding: 1rem;
    background-color: #ddd;
    color: #000;
    height: auto;
    box-shadow: 0 0 30px gray;
    ;
    clear: both;
}

.indent {
    padding: var(--spacing);
}

